1.1.2 to 1.1.3
----------------------------------------------------------------------
- Added APC System Definition for data collection.
- Fixed a null pointer exception with KSC reports.
- Fixed a small bug with SNMP Performance links on interface pages.
1.1.1 to 1.1.2
----------------------------------------------------------------------
- Fixed issues in events when nodes are deleted. Bug 708
- Fixed issues with null issnmpprimary values. Bug 741
- Added the ScriptD daemon for running BeanShell scripts. Thx Jim
- Set caspd not to reset the parentId on a rescan (useful for maps)
- Fixed a bug that caused certain rules to match all. Bug 752
- Fixed Plugins and Monitors to explicitly close sockets
- Added an ORDER BY statement to correct issues with RTC not 
  reflecting the problem number of down services.
- Added a small fix to the HTTP and HTTPS monitors that could cause
  a ClassCastException, marking the polled service as down. Thx Jim
- Added Bill Ayers' code that creates a script based plugin and 
  monitor.
- Added a fix to catch RRD update errors on nodeLostService events
  that can cause nodeDown events. Bug 748.
- Fixed a typo in mail.pl in contrib
- Added Derek's code to implement mapping in OpenNMS. This is the
  initial attempt, and thus it is disabled by default. Please
  read $OPENNMS_HOME/etc/map.disable in order to enable mapping.
  Thx. Derek
- Added a new JDBC poller which does a synthetic transaction. (Thx 
  Jose)
- Added some new trap definitions from IBM and Intel.
- Added an SSH specific poller that sends an identification string
  when connecting. Helps reduce the number of logs.
- Added a "bits" report and made it the default report for KSC.
- Added the ability to define a null filter (speeds things up)
- Added new Cisco and UCD-SNMP reports (Thx Tony and Stuart)
- Added RFC2325 to datacollection-config.xml
- Changed the count for notifications to reflect just those for the
  user logged in.